--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Paul Efren's CV"
-author: Desiree De Leon
+author: Paul Efren Santos Andrade
 date: "`r Sys.Date()`"
 output:
   pagedown::html_resume:
@@ -33,8 +33,10 @@ sheet_is_publicly_readable <- TRUE
 # Is the goal of this knit to build a document that is exported to PDF? If so
 # set this to true to have links turned into footnotes at the end of the
 # document
-PDF_EXPORT <- FALSE
-CV_PDF_LOC <- "github.com/PaulESantos/cv/raw/master/cv.pdf"
+PDF_EXPORT <- TRUE
+#https://github.com/PaulESantos/cv/blob/main/cv.pdf
+CV_PDF_LOC <-  "github.com/PaulESantos/cv/main/cv.pdf"
+  #"github.com/PaulESantos/cv/raw/master/cv.pdf"
 CV_HTML_LOC <- "paulesantos.github.io/cv/"
 # A global (gasp) variable that holds all the links that were inserted for
 # placement at the end
