--- a/index.Rmd
+++ b/index.Rmd
@@ -1,11 +1,12 @@
 ---
 title: "Paul Efren's CV"
-author: Desiree De Leon
+author: Paul Efren Santos Andrade
 date: "`r Sys.Date()`"
 output:
-  pagedown::html_resume:
+   pagedown::html_resume:
     css: ['css/styles.css', 'resume']
     # set it to true for a self-contained HTML page but it'll take longer to render
+    # pagedown::html_resume
     self_contained: true
 ---
 
@@ -33,8 +34,10 @@ sheet_is_publicly_readable <- TRUE
 # Is the goal of this knit to build a document that is exported to PDF? If so
 # set this to true to have links turned into footnotes at the end of the
 # document
-PDF_EXPORT <- FALSE
-CV_PDF_LOC <- "github.com/PaulESantos/cv/raw/master/cv.pdf"
+PDF_EXPORT <- TRUE
+#https://github.com/PaulESantos/cv/blob/main/cv.pdf
+CV_PDF_LOC <-  "github.com/PaulESantos/cv/main/cv.pdf"
+  #"github.com/PaulESantos/cv/raw/master/cv.pdf"
 CV_HTML_LOC <- "paulesantos.github.io/cv/"
 # A global (gasp) variable that holds all the links that were inserted for
 # placement at the end
